--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-/target
+package-lock.json
+node_modules/
+yarn.lock
+*.lock
+
+# rust
+target/
+Cargo.lock
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
